<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory>
        <ListPreference
                android:defaultValue="0"
                android:entries="@array/timeout_labels"
                android:entryValues="@array/timeout_values"
                android:key="timeout"
                android:title="@string/timeout"
                app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="allow_dimming"
                android:summary="@string/allow_dimming_summary"
                android:title="@string/allow_dimming_title" />
        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="alternate_mode"
                android:summary="@string/alternate_mode_summary"
                android:title="@string/alternate_mode_title" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
                android:key="about"
                android:title="@string/about" />
    </PreferenceCategory>
</PreferenceScreen>
