<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.roy.activities.MainActivity">

    <FrameLayout
            android:id="@+id/flAd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher"
            tools:ignore="ContentDescription" />

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                tools:context="com.roy.activities.MainActivity">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    tools:text="Running: 4:49 remaining" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvHint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/hint_1" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvHint2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/hint_2" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btToggleCoffee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:padding="16dp"
                    android:text="@string/toggle_coffee" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btAddToggleToHome"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/add_toggle_to_home"
                    android:textColor="?colorOnBackground" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btAddTile"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:padding="16dp"
                    android:text="@string/add_tile"
                    android:textColor="?colorOnBackground" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btSettings"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:padding="16dp"
                    android:text="@string/settings"
                    android:textColor="?colorOnBackground" />

            <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:scrollbars="none">

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                            android:id="@+id/btPolicy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/policy"
                            android:text="@string/policy"
                            app:icon="@drawable/baseline_local_police_24" />

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                            android:id="@+id/btRateApp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:contentDescription="@string/rate_app"
                            android:text="@string/rate_app"
                            app:icon="@drawable/baseline_star_rate_24" />

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                            android:id="@+id/btMoreApp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:contentDescription="@string/more_apps"
                            android:text="@string/more_apps"
                            app:icon="@drawable/baseline_get_app_24" />

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                            android:id="@+id/btShareApp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="32dp"
                            android:contentDescription="@string/share_app"
                            android:text="@string/share_app"
                            app:icon="@drawable/baseline_share_24" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </HorizontalScrollView>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
